# climatronic

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  sdkconfig
components/BME280/: CMakeLists.txt  bme280_interface.c  bme280_interface.h
components/BME280/BME280_SensorAPI/: bme280_defs.h
components/BME68x/: CMakeLists.txt  bme68x_interface.c  bme68x_interface.h
components/SCD4x/: CMakeLists.txt  scd4x_interface.c  scd4x_interface.h
components/SCD4x/embedded-i2c-scd4x/: sensirion_i2c.c  sensirion_i2c_hal.c  sensirion_i2c_hal.h
components/iic/: CMakeLists.txt  iic.c  iic.h
components/iic_mux/: CMakeLists.txt  iic_mux.c  iic_mux.h
components/output/: CMakeLists.txt  output.c  output.h
components/sensor/: CMakeLists.txt  sensor.c  sensor.h  sensor_api.h  sensor_data.c  sensor_data.h  sensor_name.c  sensor_name.h
components/timer/: CMakeLists.txt  timer.c  timer.h
components/webif/: CMakeLists.txt  index.html  webserver.c  webserver.h  wifi_connect.c  wifi_connect.h
main/: CMakeLists.txt  Kconfig.projbuild  debug.c  debug.h  firmware_main.c  idf_component.yml  menu.c  menu.h  serial.c  serial.h
